2007-11-19  Johan Dahlin  <johan@gnome.org>

	* data/glade/wizard_tvcard.glade:
	* flumotion/wizard/steps.py:
	Unbreak the non-testsource video producers.
	Fix two typos.
	(FireWireAudioStep): Move down _get_width_height to have a similar
	order to the firewire video step. *args -> checkbutton

2007-11-19  Johan Dahlin  <johan@gnome.org>
	
	* flumotion/wizard/steps.py: 
	Store instance variables in the instances instead of in classes, 
	really. Also mark them as private.
	(VideoEncoderStep.__init__): Re-order the video/audio steps
	Add section comments and sort the methods by their function.
	Mark a few more methods as private

2007-11-19  Johan Dahlin  <johan@gnome.org>

	* flumotion/wizard/steps.py (ConsumptionStep.activated): improve
	comment
	(ConsumptionStep.get_next): Refactor a bit and sort out my 
	misunderstanding of the audio/video only code paths. 
	Add comments explaining what's going on here, since it's non-obvious
	at a first glance.

2007-11-16  Johan Dahlin  <johan@gnome.org>

	* flumotion/wizard/Makefile.am (flumotion_PYTHON): 
	* flumotion/test/Makefile.am: (EXTRA_DIST): 
	Update these, add the new files in the repo.

	* data/glade/wizard_encoding.glade: Remove parts which are going to 
	be overwritten in runtime
	* data/glade/wizard_testsource.glade: Connect to two more signals
	* flumotion/test/test_wizard_models.py:
	* flumotion/wizard/models.py:
	* flumotion/wizard/steps.py:
	* flumotion/wizard/wizard.py:
	First step of MVC migration of the wizard.
	Add a Flow and Component model, start using them
	in parts of the wizard, but don't use them to do much interesting.

	Make some of the indivudal steps create the upcoming step instead of just
	returning the name, this allows us to pass the model on to the next step. 

2007-11-16  Johan Dahlin  <johan@gnome.org>

	* data/glade/wizard_consumption.glade: Set the audio/video only
	sub checkbuttons to true by default

	* flumotion/wizard/steps.py: